Wed Oct 17 17:18:04 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * DAnCE/TargetManager/descriptors/NodeDetails.dat:
        * DAnCE/TargetManager/descriptors/NodeManagerMap.dat:
        * DAnCE/tests/scripts/BasicSP/basicsp.dat:
        * docs/tutorials/Quoter/Simple/descriptors/Stock.dat:
        * examples/BasicSP/descriptors/BasicSP.dat:
        * examples/Display/descriptors/NodeManagerMap.dat:
        * examples/Hello/descriptors/NodeManagerMap.dat:
        * examples/Hello/descriptors_RTCCM/NodeManagerMap.dat:
        * examples/Hello/descriptors_events/NodeManagerMap.dat:
        * examples/Hello/descriptors_events/NodeManagerMapTwoHosts.dat:
        * performance-tests/Benchmark/descriptors/test-multi-process.dat:
        * performance-tests/Benchmark/descriptors/test.dat:
        * performance-tests/Protocols/descriptors/test.dat:
        * tests/Bug_2130_Regression/descriptors/TestNodeManagerMap.dat:

          Removed blank lines. Blank lines now cause the deployment to fail.

Wed Oct 17 15:28:42 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * MPC/config/ciao_client_dnc.mpb:
        * MPC/config/ciao_events_dnc.mpb:
        
          Removed ifr_client from base project list.

Wed Oct 17 15:24:13 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIAO_TAO_DAnCE.mwc:

           Removed unnecessary directories, removing 24 unused builds.

        * ciao/IFR_Base.idl:

           New file, containing a dummy IRObject interface, to be used
           as the return type for an unimplemented operation in CCM_Home.

        * ciao/CCM_Home.idl:

           Changed include of IFR_Base.idl from the one in
           TAO_ROOT/tao/IFR_Client to the new file above.

        * ciao/CCM_Core.mpc:

           Removed dependency on IFR_Client lib from all projects.

        * ciao/Server_init.h:
        * ciao/Client_init.cpp:
        * ciao/Cookies.h:
        * ciao/Servant_Impl_Base.h: